Fixes long message word wrap.

--- a/assets/less/views/messages.less
+++ b/assets/less/views/messages.less
@@ -251,6 +251,8 @@
 			.burst {
 				float: left;
 				clear: both;
+				max-width: 100%;
+				word-wrap: break-word;
 				&:first-child {
 					// additional margin at the top, this will be useful when we have a
 					// 'pull down to load more' feature.
